--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,61 @@
-/* HEADER  */
-
-.header-color {
-    background-color: #2c3e50;
-}
-
-#capital {
-    text-transform: uppercase;
-}
-
-
-.head-text {
-    color: white;
-    display: flex;
-    justify-content: space-between;
-}
-
-.nav {
-    list-style: none;
-}
-
-.nav li a {
-    text-decoration: none;
-    color: white;
-    padding: 0px 20px;
-    display: none;
-}
-
-.right-head-text {
-    display: flex;
-    justify-content: flex-end;
-}
 
 /* MAIN  */
+
+.star {
+    display: flex;
+    align-items: flex-end;
+}
+
+.block {
+    display: flex;
+    font-weight: bold;
+    flex-direction: column;
+    align-items: center;
+    font-size: 13px;
+}
+
 /* FIRST BLOCK  */
 
 #avatar {
     width: 35%;
 }
 
-.first-block {
-    display: flex;
-    justify-content: center;
-    background-color: #1abc9c;
 
+.first {
+    color: white;
 }
+
+.background-color {
+    background-color: #1abc9c;
+}
+
+/* SECOND BLOCK  */
+
+.second {
+    color: black;
+}
+
+.img-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.img-only {
+    width: calc((100% / 3) - 20px);
+    border-radius: 25px;
+}
+
+.img-only > img {
+    width: 100%;
+    
+}
+
+.central-img {
+    margin: 0px 10px;
+}
+
+
+
 
 
