--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,32 @@
-
-/* FIRST BLOCK  */
-
 #avatar {
     width: 35%;
 }
 
 
-.first {
-    color: white;
-}
-
-.background-color {
-    background-color: #1abc9c;
-}
-
-/* SECOND BLOCK  */
-
-.second {
-    color: black;
-}
-
-.img-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
 .img-only {
-    width: calc((100% / 3) - 20px);
-    border-radius: 25px;
+    width: calc((100% / 1) - 15px);
 }
 
-.img-only > img {
-    width: 100%;
+.round {
+    border-radius: 10px;
+}
+
+
+@media screen and (min-width: 768px) {
     
+    .img-only {
+        width: calc((100% / 2) - 20px);
+        margin: 0 auto;
+    }
 }
 
-.central-img {
-    margin: 0px 10px;
+@media screen and (min-width: 992px) {
+    
+    .img-only {
+        width: calc((100% / 3) - 20px);
+        margin: 0 auto;
+    } 
 }
-
-
 
 
 
